Fix attempting to add ::before on scrollbar

--- a/scss/_scrollbar.scss
+++ b/scss/_scrollbar.scss
@@ -15,7 +15,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-        @include boxes.box;
+        @include boxes.box($isScrollbar: true);
     }
 
     &::-webkit-scrollbar-track {
@@ -32,7 +32,7 @@
     }
 
     &::-webkit-scrollbar-thumb {
-        @include boxes.box;
+        @include boxes.box($isScrollbar: true);
         background: $grey;
     }
 
@@ -46,7 +46,7 @@
 
     &:start:decrement,
     &:end:increment {
-        @include boxes.box;
+        @include boxes.box($isScrollbar: true);
         width: 18px;
         height: 18px;
     }
